# seras-student-portal

./: .env.example  CONTRIBUTING.md  README.md  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  vercel.json
.agent/rules/: ai_guidelines.md
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: .gitignore  README.md  data_loader.ipynb  loader.py  pyproject.toml  visualizer.py
analysis/notebooks/: occupancy_analysis.ipynb  open_analysis.ipynb
analysis/src/seras_analysis/: __init__.py  auth.py  config.py  data_loader.py  plotting.py  preprocessing.py
archive/booking/: index.html
archive/gas-backend/: .clasp.json
css/: style.css
docs/: AGENTS.md  CHANGELOG.md  README.md  analysis-dev-guide.md  api-spec.md  architecture.md  database.md  deployment.md  glossary.md  permissions.md  setup.md  test_plan.md  testing.md  troubleshooting.md
docs/specs/: dashboard-requirements.md  dashboard-spec.md
js/: config.js  script.js
next-portal/: .env.example  API_TESTING.md  NEXT_STEPS.md  README.md  package-lock.json  package.json
scripts/: calculate_badges_manual.ts  debug_new_sheet.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ButtonGroup.module.css  ButtonGroup.tsx  DateButtonSelect.module.css  DateButtonSelect.tsx  TimeRangeSlider.module.css  TimeRangeSlider.tsx
src/constants/: badges.tsx
src/hooks/: useGoogleAuth.ts  usePastExamResults.ts  useRole.ts
src/lib/: StudentInfoRecord.ts  api.ts  apiHandler.ts  authConfig.ts  authUtils.ts  cacheConfig.ts  config.ts  dateUtils.ts  durationUtils.ts  formatUtils.ts  (+7 more)
(+156 files in other folders)
